# Meia-Lua

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  antlr.go  ast.go  ast_builder.go  ast_builder_test.go  error_listener.go  go.mod  go.sum  lua_ast_builder.go  main.go  print.go  test.lua  type.go  type_checker.go  type_checker_test.go
antlr/: Lua.g4  antlr_generate.sh
antlr/parser/: Lua.interp  Lua.tokens  LuaLexer.interp  LuaLexer.tokens  lua_base_listener.go  lua_base_visitor.go  lua_lexer.go  lua_listener.go  lua_parser.go  lua_visitor.go
ast/: ast.go  ast_builder.go  ast_builder_test.go
cmd/mlua/: error_listener.go  main.go  print.go
lua-5.3.5/src/: llex.c  llex.h  lparser.c
meia-lua/: BUILD.bazel  ast.go  ast_builder_test.go  go.mod  lua_ast_builder.go  main.go  type_checker.go  type_checker_test.go
meia-lua/antlr/: BUILD.bazel  Lua.g4
parser/: Lua.interp  LuaLexer.interp  LuaLexer.tokens  lua_base_visitor.go  lua_lexer.go  lua_parser.go  lua_visitor.go  staticcheck.conf
src/antlr/: Lua.g4
test/: test.lua
testFiles/: test_error.lua
typecheck/: type_checker.go  type_checker_test.go  type_environment.go
types/: type_funcs.go  types.go
