load("@io_bazel_rules_go//go:def.bzl", "go_library")

genrule(
        name = "parser_gen",
        tools = ["//third_party/antlr4:antlr4"],
        srcs = ["Lua.g4"],
        outs = [
                "lua_base_visitor.go",
                "lua_parser.go",
                "lua_visitor.go",
                "lua_lexer.go",
                "Lua.interp",
                "LuaLexer.interp",
                "LuaLexer.tokens",
                "Lua.tokens",
                ],
        cmd = "./$(location //third_party/antlr4:antlr4) -Xexact-output-dir -Dlanguage=Go -visitor -no-listener -o $(@D) $(location Lua.g4)",
        visibility = ["//visibility:public"],
        )

go_library(
        name = "parser",
        srcs = [
                "lua_base_visitor.go",
                "lua_parser.go",
                "lua_visitor.go",
                "lua_lexer.go",
                ],
        visibility = ["//visibility:public"],
        importpath = "github.com/ocurr/Meia-Lua/meia-lua/antlr/parser",
        deps = ["@com_github_antlr_antlr4//runtime/Go/antlr:go_default_library"],
)
